--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1393,6 +1393,7 @@ NoMarvelousShiftUp=15
 [ScreenEvaluationStage]
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
+Type=stage
 ShowBannerArea=1
 ShowGradeArea=1
 ShowPointsArea=0
@@ -1425,6 +1426,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationSummary]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+Type=summary
 ShowBannerArea=1
 ShowGradeArea=1
 ShowPointsArea=0
@@ -1457,6 +1459,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationNonstop]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+Type=course
 ShowBannerArea=1
 ShowGradeArea=1
 ShowPointsArea=0
@@ -1489,6 +1492,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationOni]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+Type=course
 ShowBannerArea=1
 ShowGradeArea=0
 ShowPointsArea=1
@@ -1521,6 +1525,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationEndless]
 NextScreen=ScreenNameEntry
 EndScreen=ScreenNameEntry
+Type=course
 ShowBannerArea=1
 ShowGradeArea=0
 ShowPointsArea=1
@@ -1553,6 +1558,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationBattle]
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
+Type=stage
 ShowBannerArea=1
 ShowGradeArea=1
 ShowPointsArea=0
@@ -1585,6 +1591,7 @@ JudgeSoundIfJudgeGraphicsFullAlpha=0
 [ScreenEvaluationRave]
 NextScreen=ScreenSelectMusic
 EndScreen=ScreenEvaluationSummary
+Type=stage
 ShowBannerArea=1
 ShowGradeArea=1
 ShowPointsArea=0
