Add ScreenOptionsMaster metrics. Use ScreenOptionsMaster for ScreenOptionsMenu.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -43,7 +43,7 @@ Choice1=screen,ScreenCaution
 Name1=GAME START
 Choice2=screen,ScreenSelectGame
 Name2=SELECT GAME
-Choice3=screen,ScreenOptionsMenu
+Choice3=screen,ScreenOptionsMenu@ScreenOptionsMaster
 Name3=OPTIONS
 Choice4=screen,ScreenEditMenu
 Name4=EDIT/SYNC SONGS
@@ -2377,19 +2377,34 @@ Row8Y=360
 
 [ScreenOptionsMenu]
 HelpText=&UP; &DOWN; to change line   then press START
-InputOptions=
-ConfigKey/JoyMappings=
-MachineOptions=
-GraphicOptions=
-GameplayOptions=
-AppearanceOptions=
-SoundOptions=
-AutogenOptions=
-BackgroundOptions=
-ProfileOptions=
-ReloadSongs/Courses=
 StyleIcon=0
 TimerSeconds=0
+
+# "Rows" sets the number of rows; this field is required.
+#
+# "Together" forces the vertical cursor to move together for both
+# players.
+#
+# "Explanations" enables per-item help text.
+#
+# "ForceAllPlayers" enables all players when the screen loads.
+# This should be enabled for menus used outside of gameplay.
+
+OptionMenuFlags=together;forceallplayers;rows,11
+NextScreen=
+PrevScreen=ScreenTitleMenu
+NumRows=11
+Line1=list,Appearance Options;title,;
+Line2=list,Autogen Options;title,;
+Line3=list,Background Options;title,;
+Line4=list,Config Key/Joy Mappings;title,;
+Line5=list,Input Options;title,;
+Line6=list,Gameplay Options;title,;
+Line7=list,Graphic Options;title,;
+Line8=list,Machine Options;title,;
+Line9=list,Sound Options;title,;
+Line10=list,Profile Options;title,;
+Line11=list,Reload Songs/Courses;title,;
 
 [TextBanner]
 Width=180
@@ -2581,3 +2596,202 @@ PlayerAngle=40
 DancePadAngle=36
 HelperX=320
 HelperY=320
+
+[ScreenOptionsMaster]
+# Player options
+Speed=11
+SpeedDefault=mod,1x
+Speed,1=mod,0.25x
+SpeedName,1=x0.25
+Speed,2=mod,0.50x
+SpeedName,2=x0.50
+Speed,3=mod,0.75x
+SpeedName,3=x0.75
+Speed,4=mod,1x
+SpeedName,4=x1
+Speed,5=mod,1.5x
+SpeedName,5=x1.5
+Speed,6=mod,2x
+SpeedName,6=x2
+Speed,7=mod,3x
+SpeedName,7=x3
+Speed,8=mod,5x
+SpeedName,8=x5
+Speed,9=mod,8x
+SpeedName,9=x8
+Speed,10=mod,C200
+SpeedName,10=C200
+Speed,11=mod,C400
+SpeedName,11=C400
+
+Accel=6
+AccelDefault=mod,no boost,no brake,no wave,no expand,no boomerang
+Accel,1=
+AccelName,1=OFF
+Accel,2=mod,boost
+AccelName,2=BOOST
+Accel,3=mod,brake
+AccelName,3=BRAKE
+Accel,4=mod,wave
+AccelName,4=WAVE
+Accel,5=mod,expand
+AccelName,5=EXPAND
+Accel,6=mod,boomerang
+AccelName,6=BOOMERANG
+
+Effect=7
+EffectDefault=mod,no drunk,no dizzy,no mini,no flip,no tornado,no tipsy
+Effect,1=
+EffectName,1=OFF
+Effect,2=mod,drunk
+EffectName,2=DRUNK
+Effect,3=mod,dizzy
+EffectName,3=DIZZY
+Effect,4=mod,mini
+EffectName,4=MINI
+Effect,5=mod,flip
+EffectName,5=FLIP
+Effect,6=mod,tornado
+EffectName,6=TORNADO
+Effect,7=mod,tipsy
+EffectName,7=TIPSY
+
+Appearance=6
+AppearanceDefault=mod,no sudden,no stealth,no blink,no randomvanish
+Appearance,1=
+AppearanceName,1=VISIBLE
+Appearance,2=mod,hidden
+AppearanceName,2=HIDDEN
+Appearance,3=mod,sudden
+AppearanceName,3=SUDDEN
+Appearance,4=mod,stealth
+AppearanceName,4=STEALTH
+Appearance,5=mod,blink
+AppearanceName,5=BLINK
+Appearance,6=mod,randomvanish
+AppearanceName,6=R.VANISH
+
+Turn=6
+TurnDefault=mod,no turn
+Turn,1=
+TurnName,1=OFF
+Turn,2=mod,mirror
+TurnName,2=MIRROR
+Turn,3=mod,left
+TurnName,3=LEFT
+Turn,4=mod,right
+TurnName,4=RIGHT
+Turn,5=mod,shuffle
+TurnName,5=SHUFFLE
+Turn,6=mod,supershuffle
+TurnName,6=S.SHUFFLE
+
+Transform=7
+TransformDefault=mod,no transform
+Transform,1=
+TransformName,1=OFF
+Transform,2=mod,little
+TransformName,2=LITTLE
+Transform,3=mod,wide
+TransformName,3=WIDE
+Transform,4=mod,big
+TransformName,4=BIG
+Transform,5=mod,quick
+TransformName,5=QUICK
+Transform,6=mod,skippy
+TransformName,6=SKIPPY
+Transform,7=mod,mines
+TransformName,7=MINES
+
+Scroll=4
+ScrollDefault=mod,no reverse,no split,no alternate
+Scroll,1=
+ScrollName,1=STANDARD
+Scroll,2=mod,reverse
+ScrollName,2=REVERSE
+Scroll,3=mod,split
+ScrollName,3=SPLIT
+Scroll,4=mod,alternate
+ScrollName,4=ALTERNATE
+
+Holds=2
+HoldsDefault=mod,no noholds
+Holds,1=mod,noholds
+HoldsName,1=OFF
+Holds,2=
+HoldsName,2=ON
+
+Hide=3
+HideDefault=mod,no dark,no blind
+Hide,1=
+HideName,1=OFF
+Hide,2=mod,dark
+HideName,2=DARK
+Hide,3=mod,blind
+HideName,3=BLIND
+
+Persp=5
+PerspDefault=mod,overhead
+Persp,1=mod,incoming
+PerspName,1=INCOMING
+Persp,2=mod,overhead
+PerspName,2=OVERHEAD
+Persp,3=mod,space
+PerspName,3=SPACE
+Persp,4=mod,hallway
+PerspName,4=HALLWAY
+Persp,5=mod,distant
+PerspName,5=DISTANT
+
+Beginner=BEGINNER
+Easy=LIGHT
+Medium=STANDARD
+Hard=HEAVY
+Challenge=CHALLENGE
+
+# ScreenOptionsMenu
+Appearance Options=1,together
+Appearance OptionsDefault=
+Appearance Options,1=screen,ScreenAppearanceOptions
+Appearance OptionsName,1=Appearance Options
+Autogen Options=1,together
+Autogen OptionsDefault=
+Autogen Options,1=screen,ScreenAutogenOptions
+Autogen OptionsName,1=Autogen Options
+Background Options=1,together
+Background OptionsDefault=
+Background Options,1=screen,ScreenBackgroundOptions
+Background OptionsName,1=Background Options
+Config Key/Joy Mappings=1,together
+Config Key/Joy MappingsDefault=
+Config Key/Joy Mappings,1=screen,ScreenMapControllers
+Config Key/Joy MappingsName,1=Config Key/Joy Mappings
+Input Options=1,together
+Input OptionsDefault=
+Input Options,1=screen,ScreenInputOptions
+Input OptionsName,1=Input Options
+Gameplay Options=1,together
+Gameplay OptionsDefault=
+Gameplay Options,1=screen,ScreenGameplayOptions
+Gameplay OptionsName,1=Gameplay Options
+Graphic Options=1,together
+Graphic OptionsDefault=
+Graphic Options,1=screen,ScreenGraphicOptions
+Graphic OptionsName,1=Graphic Options
+Machine Options=1,together
+Machine OptionsDefault=
+Machine Options,1=screen,ScreenMachineOptions
+Machine OptionsName,1=Machine Options
+Sound Options=1,together
+Sound OptionsDefault=
+Sound Options,1=screen,ScreenSoundOptions
+Sound OptionsName,1=Sound Options
+Profile Options=1,together
+Profile OptionsDefault=
+Profile Options,1=screen,ScreenProfileOptions
+Profile OptionsName,1=Profile Options
+Reload Songs/Courses=1,together
+Reload Songs/CoursesDefault=
+Reload Songs/Courses,1=screen,ScreenReloadSongs
+Reload Songs/CoursesName,1=Reload Songs/Courses
+
