Use ScreenOptionsMaster for ScreenSoundOptions.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2243,6 +2243,13 @@ ResamplingQuality=Advanced: Select the resampling quality to use.
 StyleIcon=0
 TimerSeconds=0
 
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,2;together;explanations
+Line1=conf,PreloadSounds
+Line2=conf,ResamplingQuality
+
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
 
@@ -2784,7 +2791,7 @@ Machine Options,1=screen,ScreenMachineOptions
 Machine OptionsName,1=Machine Options
 Sound Options=1,together
 Sound OptionsDefault=
-Sound Options,1=screen,ScreenSoundOptions
+Sound Options,1=screen,ScreenSoundOptions@ScreenOptionsMaster
 Sound OptionsName,1=Sound Options
 Profile Options=1,together
 Profile OptionsDefault=
