Use ScreenOptionsMaster for ScreenAppearanceOptions.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2050,6 +2050,26 @@ RandomAtEnd=Determines if courses with random songs should be placed at the end:
 StyleIcon=0
 TimerSeconds=0
 
+
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,14;together;explanations
+Line1=conf,Language
+Line2=conf,Announcer
+Line3=conf,Theme
+Line4=conf,DefaultNoteSkin
+Line5=conf,Instructions
+Line6=conf,Caution
+Line7=conf,OniScoreDisplay
+Line8=conf,SongGroup
+Line9=conf,WheelSections
+Line10=conf,10+FootInRed
+Line11=conf,CourseSort
+Line12=conf,RandomAtEnd
+Line13=conf,Translations
+Line14=conf,Lyrics
+
 [ScreenAutogenOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 AutogenMissingTypes=Show steps for songs that were created by Autogen.
@@ -2759,7 +2779,7 @@ Challenge=CHALLENGE
 # ScreenOptionsMenu
 Appearance Options=1,together
 Appearance OptionsDefault=
-Appearance Options,1=screen,ScreenAppearanceOptions
+Appearance Options,1=screen,ScreenAppearanceOptions@ScreenOptionsMaster
 Appearance OptionsName,1=Appearance Options
 Autogen Options=1,together
 Autogen OptionsDefault=
