Use ScreenOptionsMaster for autogen and background options

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2023,10 +2023,20 @@ Mode=Choose what type of backgrounds you would like displayed.::&oq;Animations&c
 Brightness=Controls how bright the background will appear.::Turn this setting down if you have a hard time seeing the notes.
 Danger=Turn this option &oq;OFF&cq; to disable the flashing &oq;Danger&cq;::background that shows when you're about to die.
 DancingCharacters=Turn this option &oq;OFF&cq; to disable the dancing characters::in the background.  Even if this option is &oq;ON&cq;,::characters will only show if you have some installed.
-ShowBeginnerHelper=Turn this on to enable a demonstration dancer during Beginner play.
+BeginnerHelper=Turn this on to enable a demonstration dancer during Beginner play.
 RandomBackgrounds=Choose the maximum number of random backgrounds to be loaded simultaneously.
 StyleIcon=0
 TimerSeconds=0
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,6;together;explanations
+Line1=conf,BackgroundMode;title,Mode
+Line2=conf,Brightness
+Line3=conf,Danger
+Line4=conf,DancingCharacters
+Line5=conf,BeginnerHelper
+Line6=conf,RandomBackgrounds
 
 [ScreenAppearanceOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2073,6 +2083,12 @@ AutogenMissingTypes=Show steps for songs that were created by Autogen.
 AutogenGroupCourses=Show group Nonstop and Endless courses that::were created by Autogen.
 StyleIcon=0
 TimerSeconds=0
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,2;together;explanations
+Line1=conf,AutogenMissingTypes
+Line2=conf,AutogenGroupCourses
 
 [ScreenProfileOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2780,11 +2796,11 @@ Appearance Options,1=screen,ScreenAppearanceOptions@ScreenOptionsMaster
 Appearance OptionsName,1=Appearance Options
 Autogen Options=1,together
 Autogen OptionsDefault=
-Autogen Options,1=screen,ScreenAutogenOptions
+Autogen Options,1=screen,ScreenAutogenOptions@ScreenOptionsMaster
 Autogen OptionsName,1=Autogen Options
 Background Options=1,together
 Background OptionsDefault=
-Background Options,1=screen,ScreenBackgroundOptions
+Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster
 Background OptionsName,1=Background Options
 Config Key/Joy Mappings=1,together
 Config Key/Joy MappingsDefault=
