Use ScreenOptionsMaster for input gameplay options Use smnavigation

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1973,6 +1973,17 @@ WheelSpeed=Adjusts the speed of the DDR style music wheel.
 StyleIcon=0
 TimerSeconds=0
 
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,6;together;explanations
+Line1=conf,AutoMapJoysticks
+Line2=conf,MenuButtons
+Line3=conf,AutoPlay
+Line4=conf,BackDelayed
+Line5=conf,OptionsNavigation
+Line6=conf,WheelSpeed
+
 [ScreenMachineOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 MenuTimer=Turn this &oq;OFF&cq; to disable the time limit in menus.
@@ -2016,6 +2027,16 @@ SoloSingles=Turn this option &oq;ON&cq; to enable Solo-Style::for 4-panel single
 UnlockSystem=Enable or disable unlock system.
 StyleIcon=0
 TimerSeconds=0
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,6;together;explanations
+Line1=conf,SoloSingles
+Line2=conf,HiddenSongs
+Line3=conf,EasterEggs
+Line4=conf,MarvelousTiming
+Line5=conf,PickExtraStage
+Line6=conf,UnlockSystem
 
 [ScreenBackgroundOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2429,8 +2450,12 @@ TimerSeconds=0
 #
 # "ForceAllPlayers" enables all players when the screen loads.
 # This should be enabled for menus used outside of gameplay.
+#
+# "SMNavigation" forces the START button to end the screen.  This is needed
+# when using entries that change the screen; otherwise, the only way to
+# exit the screen when in arcade mode is "exit".
 
-OptionMenuFlags=together;forceallplayers;rows,11
+OptionMenuFlags=together;forceallplayers;rows,11;smnavigation
 NextScreen=
 PrevScreen=ScreenTitleMenu
 NumRows=11
@@ -2808,11 +2833,11 @@ Config Key/Joy Mappings,1=screen,ScreenMapControllers
 Config Key/Joy MappingsName,1=Config Key/Joy Mappings
 Input Options=1,together
 Input OptionsDefault=
-Input Options,1=screen,ScreenInputOptions
+Input Options,1=screen,ScreenInputOptions@ScreenOptionsMaster
 Input OptionsName,1=Input Options
 Gameplay Options=1,together
 Gameplay OptionsDefault=
-Gameplay Options,1=screen,ScreenGameplayOptions
+Gameplay Options,1=screen,ScreenGameplayOptions@ScreenOptionsMaster
 Gameplay OptionsName,1=Gameplay Options
 Graphic Options=1,together
 Graphic OptionsDefault=
