--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1972,7 +1972,6 @@ OptionsNavigation=When using &oq;SM style&cq;, the Start button will take::you t
 WheelSpeed=Adjusts the speed of the DDR style music wheel.
 StyleIcon=0
 TimerSeconds=0
-
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
@@ -2008,7 +2007,7 @@ DisplayMode=Choose whether you would like StepMania to run full screen,::or to d
 DisplayColor=Choose the color depth of the StepMania window.::This option may not take effect in windowed mode.
 TextureColor=Choose the color depth of textures.::32 bit texture use more memory, but look nicer.
 DisplayResolution=Choose the output resolution.  A higher resolution::will show more detail, but requires a faster video card.
-MaxTextureResolution=Choose the maximum texture resolution.  Setting this::to anything below 1024 will cause some textures to appear blurry,::but may increase your frame rate.
+TextureResolution=Choose the maximum texture resolution.  Setting this::to anything below 1024 will cause some textures to appear blurry,::but may increase your frame rate.
 RefreshRate=Controls how many times per second the screen will refresh.::This setting only has an effect when the Display Mode::is set to &oq;full screen&cq;.
 MovieDecode=When a movie texture is being used, StepMania will spend this much time::between each frame to decode the next frame of the movie.  If your frame rate::is high but movie texures skip, then increase this value.
 WaitForVsync=Wait for the monitor's vertical retrace before displaying::the next frame.  This option only has an effect when the::Display Mode is set to &oq;full screen&cq;.  Turning this option off will not::cap your frame rate to the refresh rate, but may result in &oq;tearing&cq;.
@@ -2016,6 +2015,20 @@ KeepTexturesInMemory=Set to ON hold textures in memory instead of::freeing them.
 ShowStats=Display Performance Statistics in the upper right corner::of the screen.  FPS = frames per second.::TPF = triangles per frame.  DPF = draws per frame.
 StyleIcon=0
 TimerSeconds=0
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,10;together;explanations
+Line1=conf,DisplayMode
+Line2=conf,DisplayResolution
+Line3=conf,DisplayColor
+Line4=conf,TextureResolution
+Line5=conf,TextureColor
+Line6=conf,KeepTexturesInMemory
+Line7=conf,RefreshRate
+Line8=conf,MovieDecode
+Line9=conf,WaitForVsync
+Line10=conf,ShowStats
 
 [ScreenGameplayOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2841,7 +2854,7 @@ Gameplay Options,1=screen,ScreenGameplayOptions@ScreenOptionsMaster
 Gameplay OptionsName,1=Gameplay Options
 Graphic Options=1,together
 Graphic OptionsDefault=
-Graphic Options,1=screen,ScreenGraphicOptions
+Graphic Options,1=screen,ScreenGraphicOptions@ScreenOptionsMaster
 Graphic OptionsName,1=Graphic Options
 Machine Options=1,together
 Machine OptionsDefault=
