--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1750,7 +1750,7 @@ ColorNotSelected=0.5,0.5,0.5,1	// grayed
 NumShownItems=10
 
 [ScreenMapControllers]
-HelpText=Use arrow keys to navigate, ENTER to assign, SPACE to clear, ESCAPE when done.::Some USB adaptors require that you change "Ignore Joy Axes" in the Input Options screen.
+HelpText=Use arrow keys to navigate, ENTER to assign, SPACE to clear, ESCAPE when done.
 EvenLineIn=addx,-640;decelerate,0.5;addx,640;
 OddLineIn=addx,640;decelerate,0.5;addx,-640;
 EvenLineOut=stoptweening;accelerate,0.3;addx,-640;
@@ -1964,7 +1964,6 @@ StyleIcon=1
 [ScreenInputOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 AutoMapJoysticks=&oq;ON&cq; will cause StepMania automatically create::mappings for the joysticks attached to your computer::at the time the program starts.  This will::override any manually defined mappings.
-IgnoreJoyAxes=&oq;ON&cq; will cause StepMania to ignore all input from::joystick directional pads.  This is useful for the DirectPad Pro driver::and some brands of USB convertors.
 MenuButtons=The default setting allows the dance pad's panels to navigate::the menus.  Changing this to &oq;dedicated only&cq; will restrict::menu navigation to only the Menu* set of buttons.  Be sure to map::the Menu* set of buttons before setting this to &oq;dedicated&cq;!
 AutoPlay=This option is useful for those who would like to play::without using a pad.  However, you will not be able to set::high scores or earn extra stages while this options is ON.
 BackDelayed=Turning this option ON will require that you hold the Back button::for 0.5 seconds before it will regiser.  This is useful if you find::yourself accidentally pressing the Back button on your controller.
