--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1996,9 +1996,26 @@ DefaultFailType=Choose the conditions for game over.::ARCADE will stop the music
 CoinMode=When set to HOME, options will be shown on the title screen.::When set to PAY the title menu choices are hidden and you must::insert coins before joining in.  When set to FREE the title menu::choices are hidden and you can joining in without inserting coins.
 CoinsPerCredit=The number of coins that must be inserted before a player can join.
 JointPremium=When set to OFF, game styles that require both sides of the machine::will cost 2 credits.  When set to ON game styles that require both sides::of the machine will cost only 1 credit. 
-SongOptions=Select the availability of the Song Options screen.::When HIDE, it can not be accessed.  When SHOW, it will always be shown.::When set to ASK, it can be accessed by pressing START a::second time after the Player Options screen.
+ShowSongOptions=Select the availability of the Song Options screen.::When HIDE, it can not be accessed.  When SHOW, it will always be shown.::When set to ASK, it can be accessed by pressing START a::second time after the Player Options screen.
 StyleIcon=0
 TimerSeconds=0
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,13;together;explanations
+Line1=conf,MenuTimer
+Line2=conf,CoinMode
+Line3=conf,SongsPerPlay
+Line4=conf,ScoringType
+Line5=conf,JudgeDifficulty
+Line6=conf,LifeDifficulty
+Line7=conf,ProgressiveLifebar
+Line8=conf,ProgressiveStageLifebar
+Line9=conf,ProgressiveNonstopLifebar
+Line10=conf,DefaultFailType
+Line11=conf,CoinsPerCredit
+Line12=conf,JointPremium
+Line13=conf,ShowSongOptions
 
 [ScreenGraphicOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
@@ -2857,7 +2874,7 @@ Graphic Options,1=screen,ScreenGraphicOptions@ScreenOptionsMaster
 Graphic OptionsName,1=Graphic Options
 Machine Options=1,together
 Machine OptionsDefault=
-Machine Options,1=screen,ScreenMachineOptions
+Machine Options,1=screen,ScreenMachineOptions@ScreenOptionsMaster
 Machine OptionsName,1=Machine Options
 Sound Options=1,together
 Sound OptionsDefault=
