--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -41,7 +41,7 @@ CurrentModeZoom=1
 NumChoices=7 // no SANDBOX
 Choice1=screen,ScreenCaution
 Name1=GAME START
-Choice2=screen,ScreenSelectGame
+Choice2=screen,ScreenSelectGame@ScreenOptionsMaster
 Name2=SELECT GAME
 Choice3=screen,ScreenOptionsMenu@ScreenOptionsMaster
 Name3=OPTIONS
@@ -2543,6 +2543,11 @@ HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::
 Game=Change the current game type with this option.
 StyleIcon=0
 TimerSeconds=0
+PrevScreen=ScreenTitleMenu
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,1;together
+Line1=conf,Game
 
 [ScreenPlayerOptions]
 PrevScreenArcade=ScreenSelectMusic
