--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2485,7 +2485,8 @@ TimerSeconds=0
 # exit the screen when in arcade mode is "exit".
 
 OptionMenuFlags=together;forceallplayers;rows,11;smnavigation
-NextScreen=
+# This NextScreen is only used for the "exit" choice.
+NextScreen=ScreenTitleMenu
 PrevScreen=ScreenTitleMenu
 NumRows=11
 Line1=list,Appearance Options;title,;
@@ -2573,18 +2574,8 @@ Challenge=CHALLENGE
 StyleIcon=0
 
 [ScreenRaveOptions]
-PrevScreenArcade=	// should never get here
-PrevScreenNonstop=	// should never get here
-PrevScreenOni=		// should never get here
-PrevScreenEndless=	// should never get here
-PrevScreenBattle=	// should never get here
-PrevScreenRave=ScreenSelectMusic
-NextScreenArcade=	// should never get here
-NextScreenNonstop=	// should never get here
-NextScreenOni=		// should never get here
-NextScreenEndless=	// should never get here
-NextScreenBattle=	// should never get here
-NextScreenRave=ScreenStage
+PrevScreen=ScreenSelectMusic
+NextScreen=ScreenStage
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options   START to accept changes
 TimerSeconds=30
 StyleIcon=0
