derive ScreenSongOptions from ScreenOptionsMaster

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2598,6 +2598,20 @@ Game=Change the current game type with this option.
 TimerSeconds=30
 StyleIcon=0
 
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,8
+Line1=list,LifeType;title,Life::Type
+Line2=list,BarDrain;title,Bar::Drain
+Line3=list,BatLives;title,Bat::Lives
+Line4=list,Fail
+Line5=list,AssistTick;title,Assist::Tick
+Line6=list,Rate
+Line7=list,AutoAdjust;title,Auto::Adjust
+Line8=list,SaveScores;title,Save::Scores
+
+
 [ScreenCredits]
 BackgroundsBaseX=160
 BackgroundsBaseY=0
@@ -2832,6 +2846,115 @@ Persp,4=mod,hallway
 PerspName,4=HALLWAY
 Persp,5=mod,distant
 PerspName,5=DISTANT
+
+# Song options
+LifeType=2,together
+LifeTypeDefault=
+LifeType,1=mod,bar
+LifeTypeName,1=BAR
+LifeType,2=mod,battery
+LifeTypeName,2=BATTERY
+
+BarDrain=3,together
+BarDrainDefault=
+BarDrain,1=mod,normal-drain
+BarDrainName,1=NORMAL
+BarDrain,2=mod,norecover
+BarDrainName,2=NO RECOVER
+BarDrain,3=mod,suddendeath
+BarDrainName,3=SUDDEN DEATH
+
+BatLives=10,together
+BatLivesDefault=
+BatLives,1=mod,1 life
+BatLivesName,1=1
+BatLives,2=mod,2 lives
+BatLivesName,2=2
+BatLives,3=mod,3 lives
+BatLivesName,3=3
+BatLives,4=mod,4 lives
+BatLivesName,4=4
+BatLives,5=mod,5 lives
+BatLivesName,5=5
+BatLives,6=mod,6 lives
+BatLivesName,6=6
+BatLives,7=mod,7 lives
+BatLivesName,7=7
+BatLives,8=mod,8 lives
+BatLivesName,8=8
+BatLives,9=mod,9 lives
+BatLivesName,9=9
+BatLives,10=mod,10 lives
+BatLivesName,10=10
+
+Fail=3,together
+FailDefault=
+Fail,1=mod,failarcade
+FailName,1=ARCADE
+Fail,2=mod,failendofsong
+FailName,2=END OF SONG
+Fail,3=mod,failoff
+FailName,3=OFF
+
+AssistTick=2,together
+AssistTickDefault=
+AssistTick,1=mod,no assisttick
+AssistTickName,1=OFF
+AssistTick,2=mod,assisttick
+AssistTickName,2=ON
+
+Rate=18,together
+RateDefault=
+Rate,1=mod,0.3xmusic
+RateName,1=0.3x
+Rate,2=mod,0.4xmusic
+RateName,2=0.4x
+Rate,3=mod,0.5xmusic
+RateName,3=0.5x
+Rate,4=mod,0.6xmusic
+RateName,4=0.6x
+Rate,5=mod,0.7xmusic
+RateName,5=0.7x
+Rate,6=mod,0.8xmusic
+RateName,6=0.8x
+Rate,7=mod,0.9xmusic
+RateName,7=0.9x
+Rate,8=mod,1.0xmusic
+RateName,8=1.0x
+Rate,9=mod,1.1xmusic
+RateName,9=1.1x
+Rate,10=mod,1.2xmusic
+RateName,10=1.2x
+Rate,11=mod,1.3xmusic
+RateName,11=1.3x
+Rate,12=mod,1.4xmusic
+RateName,12=1.4x
+Rate,13=mod,1.5xmusic
+RateName,13=1.5x
+Rate,14=mod,1.6xmusic
+RateName,14=1.6x
+Rate,15=mod,1.7xmusic
+RateName,15=1.7x
+Rate,16=mod,1.8xmusic
+RateName,16=1.8x
+Rate,17=mod,1.9xmusic
+RateName,17=1.9x
+Rate,18=mod,2.0xmusic
+RateName,18=2.0x
+
+AutoAdjust=2,together
+AutoAdjustDefault=
+AutoAdjust,1=mod,no autosync
+AutoAdjustName,1=OFF
+AutoAdjust,2=mod,autosync
+AutoAdjustName,2=ON
+
+SaveScores=2,together
+SaveScoresDefault=
+SaveScores,1=mod,no savescore
+SaveScoresName,1=OFF
+SaveScores,2=mod,savescore
+SaveScoresName,2=ON
 
 Beginner=BEGINNER
 Easy=LIGHT
