derive ScreenPlayerOptions from ScreenOptionsMaster

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2565,13 +2565,26 @@ NextScreenBattle=ScreenSongOptions
 NextScreenRave=ScreenSongOptions
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options   START to accept changes
 TimerSeconds=30
-StyleIcon=1
-Beginner=BEGINNER
-Easy=LIGHT
-Medium=STANDARD
-Hard=HEAVY
-Challenge=CHALLENGE
 StyleIcon=0
+
+PrevScreen=
+NextScreen=
+
+OptionMenuFlags=rows,13
+
+Line1=list,Speed
+Line2=list,Accel;title,Acceler::-ation
+Line3=list,Effect
+Line4=list,Appearance;title,Appear::-ance
+Line5=list,Turn
+Line6=list,Transform;title,Trans\n-form
+Line7=list,Scroll
+Line8=list,NoteSkins
+Line9=list,Holds
+Line10=list,Hide
+Line11=list,Persp
+Line12=Steps
+Line13=Characters
 
 [ScreenRaveOptions]
 PrevScreen=ScreenSelectMusic
