--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1258,6 +1258,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="BeginnerHelper.h">
 			</File>
 			<File
+				RelativePath="CharacterHead.cpp">
+			</File>
+			<File
+				RelativePath="CharacterHead.h">
+			</File>
+			<File
 				RelativePath="CombinedLifeMeterEnemy.cpp">
 			</File>
 			<File
