--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1966,7 +1966,7 @@ StyleIcon=1
 
 [ScreenInputOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
-AutoMapJoysticks=&oq;ON&cq; will cause StepMania automatically create::mappings for the joysticks attached to your computer::at the time the program starts.  This will::override any manually defined mappings.
+AutoMapOnJoyChange=&oq;ON&cq; will cause StepMania automatically remap::all the joysticks attached to your computer if the joysticks::attached to your system are different than the last time you::started the game.  Auto mapping will override any::manually defined mappings.
 MenuButtons=The default setting allows the dance pad's panels to navigate::the menus.  Changing this to &oq;dedicated only&cq; will restrict::menu navigation to only the Menu* set of buttons.  Be sure to map::the Menu* set of buttons before setting this to &oq;dedicated&cq;!
 AutoPlay=This option is useful for those who would like to play::without using a pad.  However, you will not be able to set::high scores or earn extra stages while this options is ON.
 BackDelayed=Turning this option ON will require that you hold the Back button::for 0.5 seconds before it will regiser.  This is useful if you find::yourself accidentally pressing the Back button on your controller.
@@ -1978,7 +1978,7 @@ PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
 OptionMenuFlags=rows,6;together;explanations
-Line1=conf,AutoMapJoysticks
+Line1=conf,AutoMapOnJoyChange
 Line2=conf,MenuButtons
 Line3=conf,AutoPlay
 Line4=conf,BackDelayed
